<resources>
    <string name="app_name">Animal Sound</string>
    <string name="txt_loading">Loading</string>
    <string name="phone_icon_description">icon phone</string>
    <string name="back">Thoát</string>
    <string name="description">Description icon</string>
    <string name="description_phone">Description call phone</string>
    <string name="txt_name">Ali Connors</string>
    <string name="txt_phone1">(650) 555-6789</string>
    <string name="txt_phone2">(323) 555-6789</string>
    <string name="txt_title_mobile">Mobile</string>
    <string name="txt_email">aliconnors@example.com</string>
</resources>