<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".M001ActProfile"
    android:background="@color/gray_light"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/imgprofile"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            android:textSize="40dp"
            android:textColor="@color/indigo"
            android:layout_gravity="bottom"
            android:layout_marginStart="70dp"
            android:layout_marginBottom="90dp" />
        <ImageView
            android:src="@drawable/baseline_star_24"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_oval"
            app:tint="@color/white"
            android:padding="20dp"
            tools:ignore="ContentDescription" />
        <ImageButton
            android:id="@+id/btnback"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#00000000"
            android:src="@drawable/back"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/description_phone"/>
    </FrameLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" >
        <ImageView
            android:id="@+id/imgvPhone"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/baseline_call_24"
            app:tint="@color/indigo"
            tools:ignore="ContentDescription"
            android:padding="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_phone1"
                android:textColor="@color/gray_dark"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_title_mobile"
                android:textColor="@color/gray_mid"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/txt_phone2"
                android:textColor="@color/gray_dark"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_title_mobile"
                android:textColor="@color/gray_mid"
                android:textSize="18sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="30dp"
                android:background="@color/gray_mid" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:src="@drawable/baseline_mail_24"
            app:tint="@color/indigo"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textColor="@color/gray_dark"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_title_mobile"
                android:textColor="@color/gray_mid"
                android:textSize="18sp" />
        </LinearLayout>
    </TableRow>

</LinearLayout>